--- a/Unemployement_Analysis_With_Python.ipynb
+++ b/Unemployement_Analysis_With_Python.ipynb
@@ -115,7 +115,7 @@
         "outputId": "cc6e5660-9f2e-4662-d2b2-b8e6169ce0b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 310
+          "height": 206
         }
       },
       "outputs": [
@@ -441,11 +441,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 33,
       "id": "0f11cbe6",
       "metadata": {
         "id": "0f11cbe6",
-        "outputId": "2af2ef5d-d413-4ed4-d58e-a27ad56b9f0c",
+        "outputId": "261efa3d-434d-4ec2-fbf8-a0144f14214b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -456,24 +456,25 @@
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 768 entries, 0 to 767\n",
-            "Data columns (total 7 columns):\n",
-            " #   Column                                    Non-Null Count  Dtype  \n",
-            "---  ------                                    --------------  -----  \n",
-            " 0   Region                                    740 non-null    object \n",
-            " 1    Date                                     740 non-null    object \n",
-            " 2    Frequency                                740 non-null    object \n",
-            " 3    Estimated Unemployment Rate (%)          740 non-null    float64\n",
-            " 4    Estimated Employed                       740 non-null    float64\n",
-            " 5    Estimated Labour Participation Rate (%)  740 non-null    float64\n",
-            " 6   Area                                      740 non-null    object \n",
-            "dtypes: float64(3), object(4)\n",
-            "memory usage: 42.1+ KB\n"
+            "Int64Index: 740 entries, 0 to 753\n",
+            "Data columns (total 8 columns):\n",
+            " #   Column                    Non-Null Count  Dtype         \n",
+            "---  ------                    --------------  -----         \n",
+            " 0   State                     740 non-null    object        \n",
+            " 1   Date                      740 non-null    datetime64[ns]\n",
+            " 2   Frequency                 740 non-null    object        \n",
+            " 3   Unemployment_Rate         740 non-null    float64       \n",
+            " 4   Employed                  740 non-null    float64       \n",
+            " 5   Labor_Participation_Rate  740 non-null    float64       \n",
+            " 6   Area                      740 non-null    object        \n",
+            " 7   Month                     740 non-null    int64         \n",
+            "dtypes: datetime64[ns](1), float64(3), int64(1), object(3)\n",
+            "memory usage: 52.0+ KB\n"
           ]
         }
       ],
       "source": [
-        "ua.info()"
+        "abhi.info()"
       ]
     },
     {
@@ -484,7 +485,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 303
+          "height": 269
         },
         "id": "qHaA-9JEH4bG",
         "outputId": "a1a64216-fa1c-4e95-848e-80e3d1590c79"
@@ -1793,54 +1794,6 @@
         "sns.lineplot(x='Date', y='Unemployment_Rate', data=abhi)\n",
         "plt.title('Unemployment Rate over Time')\n",
         "plt.xlabel('Month')\n",
-        "plt.ylabel('Unemployment Rate')\n",
-        "plt.xticks(rotation=45)\n",
-        "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 25,
-      "id": "e6e95fb4",
-      "metadata": {
-        "id": "e6e95fb4",
-        "outputId": "94a800bd-0fab-43d5-8400-9113381dacd0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 433
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-25-bb21d63838cb>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Box plot of Unemployment Rate by Region\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mboxplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Region'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Unemployment_Rate'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mabhi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Unemployment Rate by Region'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Region'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/seaborn/categorical.py\u001b[0m in \u001b[0;36mboxplot\u001b[0;34m(data, x, y, hue, order, hue_order, orient, color, palette, saturation, width, dodge, fliersize, linewidth, whis, ax, **kwargs)\u001b[0m\n\u001b[1;32m   2229\u001b[0m ):\n\u001b[1;32m   2230\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2231\u001b[0;31m     plotter = _BoxPlotter(x, y, hue, data, order, hue_order,\n\u001b[0m\u001b[1;32m   2232\u001b[0m                           \u001b[0morient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpalette\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msaturation\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2233\u001b[0m                           width, dodge, fliersize, linewidth)\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/seaborn/categorical.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, x, y, hue, data, order, hue_order, orient, color, palette, saturation, width, dodge, fliersize, linewidth)\u001b[0m\n\u001b[1;32m    783\u001b[0m                  width, dodge, fliersize, linewidth):\n\u001b[1;32m    784\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 785\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestablish_variables\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhue_order\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    786\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestablish_colors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpalette\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msaturation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    787\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/seaborn/categorical.py\u001b[0m in \u001b[0;36mestablish_variables\u001b[0;34m(self, x, y, hue, data, orient, order, hue_order, units)\u001b[0m\n\u001b[1;32m    539\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    540\u001b[0m                     \u001b[0merr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"Could not interpret input '{var}'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 541\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    542\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    543\u001b[0m             \u001b[0;31m# Figure out the plotting orientation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Could not interpret input 'Region'"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<Figure size 1000x600 with 0 Axes>"
-            ]
-          },
-          "metadata": {}
-        }
-      ],
-      "source": [
-        "# Box plot of Unemployment Rate by Region\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "sns.boxplot(x='Region', y='Unemployment_Rate', data=abhi)\n",
-        "plt.title('Unemployment Rate by Region')\n",
-        "plt.xlabel('Region')\n",
         "plt.ylabel('Unemployment Rate')\n",
         "plt.xticks(rotation=45)\n",
         "plt.show()"
